force-app/main/default/objects/Contact/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Occupation_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>111</fullName>
                <label>Chief Executives, General Managers and Legislators</label>
            </value>
            <value>
                <fullName>121</fullName>
                <label>Farmers and Farm Managers</label>
            </value>
            <value>
                <fullName>131</fullName>
                <label>Advertising, Public Relations and Sales Managers</label>
            </value>
            <value>
                <fullName>132</fullName>
                <label>Business Administration Managers</label>
            </value>
            <value>
                <fullName>133</fullName>
                <label>Construction, Distribution and Production Managers</label>
            </value>
            <value>
                <fullName>134</fullName>
                <label>Education, Health and Welfare Services Managers</label>
            </value>
            <value>
                <fullName>135</fullName>
                <label>ICT Managers</label>
            </value>
            <value>
                <fullName>139</fullName>
                <label>Miscellaneous Specialist Managers</label>
            </value>
            <value>
                <fullName>141</fullName>
                <label>Accommodation and Hospitality Managers</label>
            </value>
            <value>
                <fullName>142</fullName>
                <label>Retail Managers</label>
            </value>
            <value>
                <fullName>149</fullName>
                <label>Miscellaneous Hospitality, Retail and Service Managers</label>
            </value>
            <value>
                <fullName>211</fullName>
                <label>Arts Professionals</label>
            </value>
            <value>
                <fullName>212</fullName>
                <label>Media Professionals</label>
            </value>
            <value>
                <fullName>221</fullName>
                <label>Accountants, Auditors and Company Secretaries</label>
            </value>
            <value>
                <fullName>222</fullName>
                <label>Financial Brokers and Dealers, and Investment Advisers</label>
            </value>
            <value>
                <fullName>223</fullName>
                <label>Human Resource and Training Professionals</label>
            </value>
            <value>
                <fullName>224</fullName>
                <label>Information and Organisation Professionals</label>
            </value>
            <value>
                <fullName>225</fullName>
                <label>Sales, Marketing and Public Relations Professionals</label>
            </value>
            <value>
                <fullName>231</fullName>
                <label>Air and Marine Transport Professionals</label>
            </value>
            <value>
                <fullName>232</fullName>
                <label>Architects, Designers, Planners and Surveyors</label>
            </value>
            <value>
                <fullName>233</fullName>
                <label>Engineering Professionals</label>
            </value>
            <value>
                <fullName>234</fullName>
                <label>Natural and Physical Science Professionals</label>
            </value>
            <value>
                <fullName>241</fullName>
                <label>School Teachers</label>
            </value>
            <value>
                <fullName>242</fullName>
                <label>Tertiary Education Teachers</label>
            </value>
            <value>
                <fullName>249</fullName>
                <label>Miscellaneous Education Professionals</label>
            </value>
            <value>
                <fullName>251</fullName>
                <label>Health Diagnostic and Promotion Professionals</label>
            </value>
            <value>
                <fullName>252</fullName>
                <label>Health Therapy Professionals</label>
            </value>
            <value>
                <fullName>253</fullName>
                <label>Medical Practitioners</label>
            </value>
            <value>
                <fullName>254</fullName>
                <label>Midwifery and Nursing Professionals</label>
            </value>
            <value>
                <fullName>261</fullName>
                <label>Business and Systems Analysts, and Programmers</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>