force-app/main/default/objects/Contact/fields/Occupation_Category__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Category__c</fullName>
    <label>Occupation Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Occupation_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
                <label>Clerical and Administrative Workers</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Community and Personal Service Workers</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Labourers</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Machinery Operators and Drivers</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Manager</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Professionals</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Sales Workers</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Technicians and Trades Workers</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>