force-app/main/default/objects/Contact/fields/Occupation_New__c.field-meta.xml
<CustomField>
    <fullName>Occupation_New__c</fullName>
    <label>Occupation_New</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>101</fullName>
                <label>Accountant</label>
            </value>
            <value>
                <fullName>102</fullName>
                <label>Airline Crew</label>
            </value>
            <value>
                <fullName>Assist. Director - Sports Centre</fullName>
            </value>
            <value>
                <fullName>Baker</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Business - Printing</fullName>
            </value>
            <value>
                <fullName>Business Owner</fullName>
            </value>
            <value>
                <fullName>Business Owner - Bakery</fullName>
            </value>
            <value>
                <fullName>Business Owner - Cleaning</fullName>
            </value>
            <value>
                <fullName>Business Owner - Clothing</fullName>
            </value>
            <value>
                <fullName>Business Owner - Computer</fullName>
            </value>
            <value>
                <fullName>Business Owner - Convenience Sto</fullName>
            </value>
            <value>
                <fullName>Business Owner - Factory</fullName>
            </value>
            <value>
                <fullName>Business Owner - Furniture</fullName>
            </value>
            <value>
                <fullName>Business Owner - Night Club</fullName>
            </value>
            <value>
                <fullName>Business Owner - Petrol Station</fullName>
            </value>
            <value>
                <fullName>Business Owner - Take Away Food</fullName>
            </value>
            <value>
                <fullName>Business Textile</fullName>
            </value>
            <value>
                <fullName>Businessman</fullName>
            </value>
            <value>
                <fullName>Butcher</fullName>
            </value>
            <value>
                <fullName>Carpenter</fullName>
            </value>
            <value>
                <fullName>Cashier</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>CEO - Investment Company</fullName>
            </value>
            <value>
                <fullName>Chef</fullName>
            </value>
            <value>
                <fullName>Cleaner</fullName>
            </value>
            <value>
                <fullName>Clerk</fullName>
            </value>
            <value>
                <fullName>Co. Director - Construction</fullName>
            </value>
            <value>
                <fullName>Company Director</fullName>
            </value>
            <value>
                <fullName>Company Director - Import</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>