force-app/main/default/objects/Contact/fields/Old_Age_Field__c.field-meta.xml
<CustomField>
    <fullName>Old_Age_Field__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Old Age Field</label>
    <length>4</length>
    <type>Text</type>
</CustomField>