force-app/main/default/objects/Contact/fields/Other_employment_roles__c.field-meta.xml
<CustomField>
    <fullName>Other_employment_roles__c</fullName>
    <description>Store Employment Roles</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other employment roles</label>
    <length>100</length>
    <type>Text</type>
</CustomField>