force-app/main/default/objects/Contact/fields/Overlapping_Days__c.field-meta.xml
<CustomField>
    <fullName>Overlapping_Days__c</fullName>
    <label>Overlapping Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>