force-app/main/default/objects/Contact/fields/Patron_Host__c.field-meta.xml
<CustomField>
    <fullName>Patron_Host__c</fullName>
    <formula>IF(NOT(ISBLANK( Host_Brisbane__c ) ), Host_Brisbane__r.Host_Name__c ,
IF(NOT(ISBLANK( Host_GC__c ) ), Host_GC__r.Host_Name__c ,
Host_Sydney__r.Host_Name__c )
)</formula>
    <label>Patron Host</label>
    <type>Text</type>
</CustomField>