force-app/main/default/objects/Contact/fields/Patron_ID__c.field-meta.xml
<CustomField>
    <fullName>Patron_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Patron ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>