force-app/main/default/objects/Contact/fields/Patron_Status__c.field-meta.xml
<CustomField>
    <fullName>Patron_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Patron Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>