force-app/main/default/objects/Contact/fields/PhotoId__c.field-meta.xml
<CustomField>
    <fullName>PhotoId__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>PhotoId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>