force-app/main/default/objects/Contact/fields/Portal_Email_Update_Sync_Wait__c.field-meta.xml
<CustomField>
    <fullName>Portal_Email_Update_Sync_Wait__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom Field created for Member Portal to wait for Email Update to be synced from MDM.</description>
    <label>Portal Email Update Sync Wait</label>
    <type>Checkbox</type>
</CustomField>