force-app/main/default/objects/Contact/fields/Portal_Email_Updated_Time__c.field-meta.xml
<CustomField>
    <fullName>Portal_Email_Updated_Time__c</fullName>
    <description>Custom Field created for Member Portal to wait for Email Update to be synced from MDM.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Portal Email Updated Time</label>
    <type>DateTime</type>
</CustomField>