force-app/main/default/objects/Contact/fields/Portal_Mobile_Update_Sync_Wait__c.field-meta.xml
<CustomField>
    <fullName>Portal_Mobile_Update_Sync_Wait__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom Field created for Member Portal to sync the Mobile update from MDM to Salesforce.</description>
    <label>Portal Mobile Update Sync Wait</label>
    <type>Checkbox</type>
</CustomField>