force-app/main/default/objects/Contact/fields/Portal_Mobile_Updated_Time__c.field-meta.xml
<CustomField>
    <fullName>Portal_Mobile_Updated_Time__c</fullName>
    <description>Custom Field created for Member Portal to sync the Mobile update from MDM to Salesforce.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Portal Mobile Updated Time</label>
    <type>DateTime</type>
</CustomField>