force-app/main/default/objects/Contact/fields/Preferred_Address__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Address__c</fullName>
    <label>Preferred Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential Address</fullName>
            </value>
            <value>
                <fullName>Mailing Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>