force-app/main/default/objects/Contact/fields/Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Email__c</fullName>
    <label>Preferred Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Email</fullName>
            </value>
            <value>
                <fullName>Work Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>