force-app/main/default/objects/Contact/fields/Preferred_Phone__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Preferred Phone</label>
    <type>Phone</type>
</CustomField>