force-app/main/default/objects/Contact/fields/Professional_qualifications__c.field-meta.xml
<CustomField>
    <fullName>Professional_qualifications__c</fullName>
    <description>Store Qualifications Details</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Professional qualifications</label>
    <length>100</length>
    <type>Text</type>
</CustomField>