force-app/main/default/objects/Contact/fields/Program_Lifetime__c.field-meta.xml
<CustomField>
    <fullName>Program_Lifetime__c</fullName>
    <label>Lifetime # Programs</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>