force-app/main/default/objects/Contact/fields/Program_Rolling_365__c.field-meta.xml
<CustomField>
    <fullName>Program_Rolling_365__c</fullName>
    <label>Rolling 365 # Programs</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>