force-app/main/default/objects/Contact/fields/QLD_Warning_Flag__c.field-meta.xml
<CustomField>
    <fullName>QLD_Warning_Flag__c</fullName>
    <formula>IF( ISPICKVAL(Residency_Type__c , &apos;Domestic&apos;) ,
IF(Total_QLD_Days__c &gt; 150, 
(TEXT( Total_QLD_Days__c ) &amp; &apos;   &apos; &amp; IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red Flag&quot;)), 
(TEXT( Total_QLD_Days__c ))),
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total days spent in QLD last 12 months</label>
    <type>Text</type>
</CustomField>