force-app/main/default/objects/Contact/fields/Refused_to_provide_SOW__c.field-meta.xml
<CustomField>
    <fullName>Refused_to_provide_SOW__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Reminder to complete the Unusual Activity Referral form</inlineHelpText>
    <label>Refused to provide SOW</label>
    <type>Checkbox</type>
</CustomField>