force-app/main/default/objects/Contact/fields/Retired_Pre_retirement_employment__c.field-meta.xml
<CustomField>
    <fullName>Retired_Pre_retirement_employment__c</fullName>
    <description>Store the details If Retired, what was their employment prior to retirement?</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Retired? Pre-retirement employment?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>