force-app/main/default/objects/Contact/fields/Salesforce_Local_lookup__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Local_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce Local Parent Obj, Contact Child obj</description>
    <label>Salesforce Local lookup</label>
    <referenceTo>Salesforce_Local__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>