force-app/main/default/objects/Contact/fields/SoF_Declaration_DateTime__c.field-meta.xml
<CustomField>
    <fullName>SoF_Declaration_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SoF Declaration DateTime</label>
    <type>DateTime</type>
</CustomField>