force-app/main/default/objects/Contact/fields/Source_of_Wealth_for_Individuals__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Wealth_for_Individuals__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Source of Wealth for Individuals</label>
    <length>250</length>
    <type>Text</type>
</CustomField>