force-app/main/default/objects/Contact/fields/SoW_Update_DateTime__c.field-meta.xml
<CustomField>
    <fullName>SoW_Update_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SoW Update DateTime</label>
    <type>DateTime</type>
</CustomField>