force-app/main/default/objects/Contact/fields/SPV_MPV_total__c.field-meta.xml
<CustomField>
    <fullName>SPV_MPV_total__c</fullName>
    <label>SPV/MPV</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>