force-app/main/default/objects/Contact/fields/Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Status_Flag__c</fullName>
    <formula>IF

( Patron_Status__c  = &quot;Active&quot;,

IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green Flag&quot;),

IF

(Patron_Status__c  = &quot;Inactive&quot;,

IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red Flag&quot;),

IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Yellow Flag&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>