force-app/main/default/objects/Contact/fields/Student_Present_means_of_support__c.field-meta.xml
<CustomField>
    <fullName>Student_Present_means_of_support__c</fullName>
    <description>Store the Info about If a Student? how do they support themselves?</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Student? Present means of support?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>