force-app/main/default/objects/Contact/fields/Temp_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Temp_Date_of_Birth__c</fullName>
    <formula>Date_of_Birth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temp Date of Birth</label>
    <type>Date</type>
</CustomField>