force-app/main/default/objects/Contact/fields/Test_Dupe__c.field-meta.xml
<CustomField>
    <fullName>Test_Dupe__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Test Dupe</label>
    <length>20</length>
    <type>Text</type>
</CustomField>