force-app/main/default/objects/Contact/fields/Their_role_in_that_business__c.field-meta.xml
<CustomField>
    <fullName>Their_role_in_that_business__c</fullName>
    <description>Use to store individual role in the business</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Their role in that business</label>
    <length>125</length>
    <type>Text</type>
</CustomField>