force-app/main/default/objects/Contact/fields/Their_role_Job_title_within_the_business__c.field-meta.xml
<CustomField>
    <fullName>Their_role_Job_title_within_the_business__c</fullName>
    <description>Contain role or title within the business</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Their role/Job title within the business</label>
    <length>100</length>
    <type>Text</type>
</CustomField>