force-app/main/default/objects/Contact/fields/Total_Days_International_Patron__c.field-meta.xml
<CustomField>
    <fullName>Total_Days_International_Patron__c</fullName>
    <description>Calendar days an international patron has spent in Australia</description>
    <label>Total Days International Patron</label>
    <summarizedField>Trip__c.Trip_Duration__c</summarizedField>
    <summaryFilterItems>
        <field>Trip__c.is_within_365_days__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Trip__c.Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>