force-app/main/default/objects/Contact/fields/Total_days_spent_in_both_States__c.field-meta.xml
<CustomField>
    <fullName>Total_days_spent_in_both_States__c</fullName>
    <formula>TEXT(CountDaysInNSW__c + CountTotalDaysinQLD__c ) &amp; &apos;&apos; &amp; IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red Flag&quot;) &amp; &apos;&apos; &amp; &apos;(&apos; &amp; &apos;CASH Play only!!&apos; &amp; &apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total days spent in both States OLD</label>
    <type>Text</type>
</CustomField>