force-app/main/default/objects/Contact/fields/Total_days_spent_in_QLD_last_12_months__c.field-meta.xml
<CustomField>
    <fullName>Total_days_spent_in_QLD_last_12_months__c</fullName>
    <formula>TEXT( CountTotalDaysinQLD__c ) &amp; &apos;  &apos; &amp; IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red Flag&quot;) &amp; &apos;&apos; &amp; &apos;(&apos; &amp; &apos;CASH Play only!!&apos; &amp; &apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total days spent in QLD last 12 months</label>
    <type>Text</type>
</CustomField>