force-app/main/default/objects/Contact/fields/Total_Days_Spent_Warning_Flag__c.field-meta.xml
<CustomField>
    <fullName>Total_Days_Spent_Warning_Flag__c</fullName>
    <formula>IF(
ISPICKVAL(Residency_Type__c, &apos;International&apos;),
IF( 
(Total_QLD_Days__c +   Total_NSW_Days__c - Overlapping_Days__c)  &gt; 150, 
TEXT( (Total_QLD_Days__c + Total_NSW_Days__c - Overlapping_Days__c) ) &amp; &apos;   &apos; &amp; IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red Flag&quot;), 
TEXT( (Total_QLD_Days__c +   Total_NSW_Days__c - Overlapping_Days__c) ) 
),
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total days spent in Australia</label>
    <type>Text</type>
</CustomField>