force-app/main/default/objects/Contact/fields/Total_NSW_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_NSW_Days__c</fullName>
    <description>Calendar days a domestic patron has spent in NSW</description>
    <label>Total NSW Days</label>
    <summarizedField>Trip__c.Trip_Duration__c</summarizedField>
    <summaryFilterItems>
        <field>Trip__c.Entry_State__c</field>
        <operation>equals</operation>
        <value>NSW</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Trip__c.is_within_365_days__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Trip__c.Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>