force-app/main/default/objects/Contact/fields/Total_Sales_Comp__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Comp__c</fullName>
    <formula>CD_CP_total__c + SPV_MPV_total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sales Comp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>