force-app/main/default/objects/Contact/fields/Web_Address__c.field-meta.xml
<CustomField>
    <fullName>Web_Address__c</fullName>
    <description>Web Address for Business</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Web Address</label>
    <type>Url</type>
</CustomField>