force-app/main/default/objects/Contact/fields/Wechat_ID__c.field-meta.xml
<CustomField>
    <fullName>Wechat_ID__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Wechat ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>