force-app/main/default/objects/Contact/fields/What_does_the_business_do__c.field-meta.xml
<CustomField>
    <fullName>What_does_the_business_do__c</fullName>
    <description>Use to store Business Work Details</description>
    <encryptionScheme>None</encryptionScheme>
    <label>What does the business do?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>