force-app/main/default/objects/Contact/fields/Whatsapp_Number_ID__c.field-meta.xml
<CustomField>
    <fullName>Whatsapp_Number_ID__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Whatsapp Number/ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>