force-app/main/default/objects/Contact/fields/Who_do_they_work_for_employer_details__c.field-meta.xml
<CustomField>
    <fullName>Who_do_they_work_for_employer_details__c</fullName>
    <description>use to store employer details</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Who do they work for (employer details)?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>